[gd_scene load_steps=24 format=3 uid="uid://dos53wexsq3es"]

[ext_resource type="Script" uid="uid://bruajv8q4sdju" path="res://enemy_script/enemy_test.gd" id="1_mds2i"]
[ext_resource type="Shader" uid="uid://0rkammlwqtc4" path="res://shader/enemy.gdshader" id="2_32jnx"]
[ext_resource type="Texture2D" uid="uid://c6s0gqlm1giqc" path="res://Genesis Labs Assets/SLIME/spritesheet/slime-spritesheet.png" id="3_nifpp"]
[ext_resource type="Script" uid="uid://rxkqqlm4tj55" path="res://script/state_machine.gd" id="4_5puke"]
[ext_resource type="Script" uid="uid://dhfoypygupkq5" path="res://enemy_script/enemy_follow_test.gd" id="5_l7vth"]
[ext_resource type="Script" uid="uid://b6px4plqxjmar" path="res://enemy_script/enemy_death_test.gd" id="6_npn2g"]
[ext_resource type="Script" uid="uid://bcohmprqivbto" path="res://enemy_script/enemy_attack_test.gd" id="7_2am0x"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_b7koy"]
resource_local_to_scene = true
shader = ExtResource("2_32jnx")
shader_parameter/blink_color = Color(1, 0, 0, 0.486275)
shader_parameter/blink_intensity = 0.0

[sub_resource type="AtlasTexture" id="AtlasTexture_qhqle"]
atlas = ExtResource("3_nifpp")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pw261"]
atlas = ExtResource("3_nifpp")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rs6j2"]
atlas = ExtResource("3_nifpp")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0n578"]
atlas = ExtResource("3_nifpp")
region = Rect2(96, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulb22"]
atlas = ExtResource("3_nifpp")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e552"]
atlas = ExtResource("3_nifpp")
region = Rect2(32, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vgurf"]
atlas = ExtResource("3_nifpp")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kqmod"]
atlas = ExtResource("3_nifpp")
region = Rect2(96, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f87vc"]
atlas = ExtResource("3_nifpp")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8u16h"]
atlas = ExtResource("3_nifpp")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b7koy"]
atlas = ExtResource("3_nifpp")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yvcfn"]
atlas = ExtResource("3_nifpp")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ulb22"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_qhqle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pw261")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rs6j2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0n578")
}],
"loop": true,
"name": &"attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulb22")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e552")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vgurf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kqmod")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f87vc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8u16h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b7koy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yvcfn")
}],
"loop": true,
"name": &"slime",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_1e552"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ulb22"]
radius = 15.0

[node name="Enemy_test" type="CharacterBody2D"]
modulate = Color(1, 0, 0, 1)
collision_layer = 2
collision_mask = 2
script = ExtResource("1_mds2i")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
material = SubResource("ShaderMaterial_b7koy")
sprite_frames = SubResource("SpriteFrames_ulb22")
animation = &"slime"
autoplay = "slime"
frame_progress = 0.59426

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(2, 7)
shape = SubResource("CircleShape2D_1e552")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
avoidance_enabled = true

[node name="hp" type="ProgressBar" parent="."]
modulate = Color(0.486275, 1, 0.2, 1)
offset_left = -13.0
offset_top = -11.0
offset_right = 19.0
offset_bottom = -3.0
value = 100.0
show_percentage = false

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initital_state")]
script = ExtResource("4_5puke")
initital_state = NodePath("enemy_follow")

[node name="enemy_follow" type="Node" parent="State Machine"]
script = ExtResource("5_l7vth")

[node name="enemy_death" type="Node" parent="State Machine"]
script = ExtResource("6_npn2g")

[node name="enemy_attack" type="Node" parent="State Machine"]
script = ExtResource("7_2am0x")

[node name="attack_range" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack_range"]
position = Vector2(2, 7)
shape = SubResource("CircleShape2D_ulb22")
debug_color = Color(0.998211, 0, 0.147784, 0.42)

[connection signal="attack_now" from="." to="State Machine/enemy_follow" method="_on_enemy_attack_now"]
[connection signal="dead_now" from="." to="State Machine/enemy_follow" method="_on_enemy_dead_now"]
[connection signal="body_entered" from="attack_range" to="." method="_on_attack_range_body_entered"]
[connection signal="body_exited" from="attack_range" to="." method="_on_attack_range_body_exited"]
